Fix Codesmells (#889)