@@ -260,7 +260,8 @@ public class MockPlayerList
 		String nameLower = name.toLowerCase(Locale.ENGLISH);
 		return this.onlinePlayers.stream()
 				.filter(player -> player.getName().toLowerCase(Locale.ENGLISH).startsWith(nameLower))
-				.collect(Collectors.toList());
+				.map(player -> (Player) player)
+				.toList();
 	}
 
 	/**
